--- a/src/index.pug
+++ b/src/index.pug
@@ -4,9 +4,12 @@ block content
   h1 Igloo
   p What is igloo? Igloo is a set of opinionated components or modules that are built upon the inuitCSS framework by Harry Roberts.
 
-  h2 Table of Content
+  h2 Table of Contents
 
   ul
+    li: a(href="#") Content
+      ul
+        li: a(href="tables.html") Tables
     li: a(href="buttons.html") Buttons
     li: a(href="typography.html") Typography
       ul
