--- a/src/index.pug
+++ b/src/index.pug
@@ -6,11 +6,12 @@ block content
 
   h2 Table of Contents
 
-  ul
+  ul.o-list-bare
     li: a(href="#") Content
       ul
         li: a(href="tables.html") Tables
     li: a(href="buttons.html") Buttons
+    li: a(href="form.html") Form
     li: a(href="typography.html") Typography
       ul
         li: a(href="article.html") Article
